fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ margin: 0;
     width: 80vw;
   }
 
+  #parent {
+    margin: -60px;
+  }
+  
   .chatbot {
       width: 90%;
       height: calc(var(--vh, 1vh) * 90);
@@ -112,7 +116,7 @@ margin: 0;
 
   .newsfeed {
     display: block;
-    height: 100vh; /* 100% Full-height */
+    height: 100%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
